# Raytracer

./: .gitignore  CMakeLists.txt  README.md  callgrind.out.95315  doxide.yaml  main.cpp  mkdocs.yaml
.github/workflows/: raytracer.yml
docs/: index.md
docs/RayTracer/: ILight.md  IMaterial.md  IPrimitive.md  PrimitiveFactory.md  Ray.md  Scene.md  Vector3D.md  index.md
include/: raytracer.hpp
src/: main.cpp
src/Core/: Engine.cpp  Engine.hpp  Ray.cpp  Ray.hpp
src/Factory/: AmbientLightFactory.cpp  AmbientLightFactory.hpp  ConeFactory.cpp  ConeFactory.hpp  CylinderFactory.cpp  CylinderFactory.hpp  DirectionalLightFactory.cpp  DirectionalLightFactory.hpp  FlatColorMaterialFactory.cpp  FlatColorMaterialFactory.hpp  ILightFactory.cpp  ILightFactory.hpp  IMaterialFactory.cpp  IMaterialFactory.hpp  PlaneFactory.cpp  PlaneFactory.hpp  PointLightFactory.cpp  PointLightFactory.hpp  PrimitiveFactory.cpp  PrimitiveFactory.hpp  SphereFactory.cpp  SphereFactory.hpp  TransparencyMaterialFactory.cpp  TransparencyMaterialFactory.hpp
src/Lights/: AmbientLight.cpp  AmbientLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  DropShadow.cpp  DropShadow.hpp  ILight.hpp  ILightFactory.hpp  PointLight.cpp  PointLight.hpp
src/Materials/: FlatColorMaterial.cpp  FlatColorMaterial.hpp  IMaterial.hpp  TransparencyMaterial.cpp  TransparencyMaterial.hpp
src/Math/: Point3D.cpp  Point3D.hpp  Vector3D.cpp  Vector3D.hpp
src/Photon/: PhotonMapping.cpp  PhotonMapping.hpp
src/Primitives/: IPrimitive.hpp
src/Scene/: Camera.cpp  Camera.hpp  Scene.cpp  Scene.hpp
src/Utils/: Color.cpp  (+3 more)
(+10 files in other folders)
